@@ -1,3 +1,8 @@
+2007-04-07  Andrey Slusar  <anrays@gmail.com>
+
+	* src/toss/ftntoss.c (do_unknown_area): Correct
+	works `KillUnknown' option(thanks to Dmitry Rodin).
+
 2007-01-30  Andrey Slusar  <anrays@gmail.com>
 
 	======= Release 5.1.7ds ========================
